Fixed: header spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -101,6 +101,8 @@ body {
 @media screen and (max-width: 720px){
   .center {
     font-size: 1rem;
+    padding: 2rem;
+    margin-top: 1rem;
   }
   .bubble > a {
     font-size: .9rem;
